--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/node": "25.0.3",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
